--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -5,25 +5,21 @@ body {
 }
 
 .sidebar {
-    min-width: 250px;
-    max-width: 250px;
+    min-width: 150px;
+    max-width: 150px;
     background-color: #343a40;
-    padding-top: 20px;
-    color: #fff;
 }
 
-.sidebar a {
-    color: #fff;
+.sidebar .nav-link {
+    color: #ffffff;
     padding: 15px;
     text-decoration: none;
     display: block;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-.sidebar a:hover {
-    background-color: #495057;
-}
-
-.content {
-    flex: 1;
-    padding: 20px;
+.sidebar .nav-link:hover,
+.sidebar .nav-link.active {
+    color: #000000;
+    background-color: #f8fafc;
 }
